--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "type": "module",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "mysql": "^2.18.1"
+        "formidable": "^2.1.1",
+        "mysql": "^2.18.1",
+        "path": "^0.12.7",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
