--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "projet_blog",
+    "name": "back_PFE",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
@@ -18,8 +18,9 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "formidable": "^2.1.1",
+        "jsonwebtoken": "^9.0.0",
         "mysql": "^2.18.1",
-        "path": "^0.12.7",
+        "parseurl": "^1.3.3",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
