--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "build-css": "sass ./src/styles/main.scss ./src/index.css",
+        "watch-css": "sass --watch ./src/styles/main.scss ./src/index.css",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
