--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "jsonwebtoken": "^9.0.0",
         "mysql": "^2.18.1",
         "parseurl": "^1.3.3",
+        "sass": "^1.59.2",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
